--- a/Front-end/Css/Style.css
+++ b/Front-end/Css/Style.css
@@ -185,6 +185,32 @@ footer .fatecIcon {
   padding: 5px 0;
 }
 
+/*--------------------------------------VOLTAR AO TOPO-------------------------------------- */
+
+.back-to-top {
+  background: #777;
+  color: white;
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  padding: 1rem;
+  clip-path: margin-box;
+  font-size: 1rem;
+  line-height: 0;
+
+  visibility: hidden;
+  opacity: 0;
+
+  transition: 0.3s;
+  transform: translateY(100%);
+}
+
+.back-to-top.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /*--------------------------------------ESTILO DAS PAGINAS DE CURSOS-------------------------------------- */
 
 /*--------------------------------------INFORMAÇÕES DE CADA CURSO-------------------------------------- */
